Fix skewed spacing for article images

--- a/_sass/3-modules/_article.scss
+++ b/_sass/3-modules/_article.scss
@@ -31,7 +31,6 @@
 .article__image {
   position: relative;
   transform: translate(0);
-  display: block;
   min-height: 260px;
   aspect-ratio: 3/2;
   border-radius: 12px 12px 0 0;
